@@ -1,7 +1,9 @@
 SUBDIRS = help
 
-
-
+schemadir   = @GCONF_SCHEMA_FILE_DIR@
+schema_in_files = glines.schemas.in
+schema_DATA = $(schema_in_files:.schemas.in=.schemas)
+@INTLTOOL_SCHEMAS_RULE@
 
 pixmapdir = $(datadir)/pixmaps/glines
 icondir = $(datadir)/pixmaps
@@ -37,6 +39,9 @@ Games_DATA = $(Games_in_files:.desktop.in=.desktop)
 CLEANFILES = $(Games_DATA)
 
 install-data-local:
+if GCONF_SCHEMAS_INSTALL
+	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
+endif
 	-$(mkinstalldirs) $(DESTDIR)$(scoredir)
 	touch $(DESTDIR)$(scoredir)/glines.scores
 	-chown $(scores_user).$(scores_group) $(DESTDIR)$(scoredir)/glines.scores
