@@ -1,0 +1,79 @@
+<gconfschemafile>
+
+  <schemalist>
+      <schema>
+      <key>/schemas/apps/glines/table/ball_theme</key>
+      <applyto>/apps/gnect/table/ball_theme</applyto>
+      <owner>glines</owner>
+      <type>string</type>
+      <default>pulse.png</default>
+      <locale name="C">
+        <short>Ball style</short>
+        <long>Ball style.  The filename of the images to use for the balls.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/glines/table/box_theme</key>
+      <applyto>/apps/glines/table/box_theme</applyto>
+      <owner>glines</owner>
+      <type>string</type>
+      <default>gray.xpm</default>
+      <locale name="C">
+        <short>Box style</short>
+        <long>Box style.  The filename of the image to use for the boxes.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/glines/preferences/move_timeout</key>
+      <applyto>/apps/glines/preferences/move_timeout</applyto>
+      <owner>glines</owner>
+      <type>int</type>
+      <default>100</default>
+      <locale name="C">
+        <short>Time between moves</short>
+        <long>Time between moves in milliseconds.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/glines/saved/score</key>
+      <applyto>/apps/glines/saved/score</applyto>
+      <owner>glines</owner>
+      <type>int</type>
+      <default>0</default>
+      <locale name="C">
+        <short>Game score</short>
+        <long>Game score from last saved session.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/glines/saved/field</key>
+      <applyto>/apps/glines/saved/field</applyto>
+      <owner>glines</owner>
+      <type>string</type>
+      <default></default>
+      <locale name="C">
+        <short>Game field</short>
+        <long>Game field from last saved session.</long>
+      </locale>
+      </schema>
+
+      <schema>
+      <key>/schemas/apps/glines/saved/preview</key>
+      <applyto>/apps/glines/saved/preview</applyto>
+      <owner>glines</owner>
+      <type>string</type>
+      <default></default>
+      <locale name="C">
+        <short>Game preview</short>
+        <long>Game preview from last saved session.</long>
+      </locale>
+      </schema>
+
+  </schemalist>
+
+</gconfschemafile>
+
